--- a/presentations/slides/HowToMetadata.html
+++ b/presentations/slides/HowToMetadata.html
@@ -354,7 +354,7 @@
 				<section>
 					<h3>Exercise 3: Use Content Standards</h3>
 					<p>Apply the "Using Dublin Core" content standard to your metadata.</p>
-					<h2>bit.ly/1T6tkBQ</h2>
+					<h2>bit.ly/1o8Ykny</h2>
 				</section>
 				<section>
 					<h1>Decision 4: Controls</h1>
@@ -432,10 +432,10 @@
 					</ul>
 				</section>
 				<section class="centerAlign">
-					<h1>Exercise 3: Reconcile Your Data</h1>
+					<h1>Exercise 4: Reconcile Your Data</h1>
 				</section>
 				<section>
-					<h3>Exercise 3: Reconcile Your Data</h3>
+					<h3>Exercise 4: Reconcile Your Data</h3>
 					<p>Use appropriate authorities to reconcile your metadata</p>
 					<h2>LC1: authorities.loc.gov</h2>
 					<h2>LC2: id.loc.gov</h2>
@@ -448,6 +448,7 @@
 						<li class="fragment">integer: "1", "63", "232234835482957205927059270597204"</li>
 						<li class="fragment">float: "43.5", "0.0", "1314.24242"</li>
 						<li class="fragment">string: "This is my string."</li>
+						<li class="fragment">Also strings: "4348928983671", "true"</li>
 					</ul>
 				</section>
 				<section>
@@ -514,11 +515,11 @@
 					<p class="fragment">We are humans, we break things</p>
 				</section>
 				<section class="centerAlign">
-					<h1>Exercise 4: Keep You Data Clean</h1>
+					<h1>Exercise 5 Keep You Data Clean</h1>
 					<img src="img/clean.gif"/>
 				</section>
 				<section>
-					<h3>Exercise 4: Keep You Data Clean</h3>
+					<h3>Exercise 5: Keep You Data Clean</h3>
 					<p>Develop some best practices and automated controls for your metadata.</p>
 				</section>
 				<section>
@@ -538,11 +539,11 @@
 				</section>
 				
 				<section>
-					<h1>Exercise 5: Describing Different Formats</h1>
+					<h1>Exercise 6: Describing Different Formats</h1>
 				</section>
 				
 				<section>
-					<h3>Exercise 5: Describing Different Formats</h3>
+					<h3>Exercise 6: Describing Different Formats</h3>
 					<h2><a>Images</a></h2>
 					<h2><a href="img/lt.mp3" target="_blank">Audio</a></h2>
 				</section>
@@ -622,12 +623,12 @@
 				<section>
 					<h3>Metadata in Practice</h3>
 					<p>Schema.org</p>
-					<img src="img/schemaOrg1.gif"/>
+					<img src="img/schemaOrg1.png"/>
 				</section>
 				<section>
 					<h3>Metadata in Practice</h3>
 					<p>Schema.org</p>
-					<img src="img/schemaOrg2.gif"/>
+					<img src="img/schemaOrg2.png"/>
 				</section>
             </div>
         </div>
