--- a/presentations/slides/HowToMetadata.html
+++ b/presentations/slides/HowToMetadata.html
@@ -585,7 +585,7 @@
 				<section>
 					<h3>Exercise 6: Describing Different Formats</h3>
 					<h2><a href="http://bit.ly/1ZxoSga" target="_blank">Images</a></h2>
-					<h2><a href="http://img/lt.mp3" target="_blank">Audio</a></h2>
+					<h2><a href="img/lt.mp3" target="_blank">Audio</a></h2>
 				</section>
 				
 				<section>
