updated img links

--- a/presentations/slides/Access2WebArch.html
+++ b/presentations/slides/Access2WebArch.html
@@ -38,10 +38,10 @@
 					University Archivist<br/>
 					University at Albany, SUNY</p>
 					<p id="fLeft">
-						<img src="img/saa-16twitter.png" style="margin: 0px; background: none; border: none;" width="30px"/>@gwiedeman
+						<img src="img-saa16/twitter.png" style="margin: 0px; background: none; border: none;" width="30px"/>@gwiedeman
 					</p>
 					<p id="fRight">
-						<img src="img/saa-16github.png" style="margin: 0px; background: none; border: none;" width="30px"/>github.com/UAlbanyArchives
+						<img src="img-saa16/github.png" style="margin: 0px; background: none; border: none;" width="30px"/>github.com/UAlbanyArchives
 					</p>
 				</section>
                 <section>
@@ -104,11 +104,11 @@
 				</section>
 				<section>
 					<h3>Records that need to be discoverable</h3>
-					<img src="img/saa-16history-course-cat.png"/>
+					<img src="img-saa16/history-course-cat.png"/>
 				</section>
 				<section>
 					<h3>Records that need to be discoverable</h3>
-					<img src="img/saa-16history-404.png"/>
+					<img src="img-saa16/history-404.png"/>
 				</section>
 				<section>
 					<h3>Integration with Collection Management</h3>
@@ -131,12 +131,12 @@
 						<li id="showImg">Wayback CDX server</li>
 						<ul>
 							<li><a href="http://web.archive.org/cdx/search/cdx?url=http://www.albany.edu/history/course-descriptions.shtml">http://web.archive.org/cdx/search/cdx?url=[url]</a></li>
-							<img class="noDisplay" src="img/saa-16wayback-cdx.png"/>
+							<img class="noDisplay" src="img-saa16/wayback-cdx.png"/>
 						</ul>
 						<li id="showImg2">Archive-It CDX for Collections</li>
 						<ul>
 							<li><a href="http://wayback.archive-it.org/3308/timemap/cdx?url=http://www.albany.edu/history/course-descriptions.shtml">http://wayback.archive-it.org/[col#]/timemap/cdx?url=[url]</a></li>
-							<img class="noDisplay" src="img/saa-16cdx-results.png"/>
+							<img class="noDisplay" src="img-saa16/cdx-results.png"/>
 						</ul>
 					</ul>
 				</section>
@@ -146,7 +146,7 @@
 				</section>
 				<section>
 					<h3>Future: ArchivesSpace Integration</h3>
-					<img class="centerAlign" style="text-align:center;" src="img/saa-16ASpace-dfd.png"/>
+					<img class="centerAlign" style="text-align:center;" src="img-saa16/ASpace-dfd.png"/>
 				</section>	
 				<section>
 					<h3>Access</h3>
@@ -160,18 +160,18 @@
 						</ul>
 					</ul>
 				</section>
-				<section data-background-image="img/saa-16access1.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img/saa-16access2.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img/saa-16access3.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img/saa-16access4.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img/saa-16access5.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img/saa-16access6.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img/saa-16access7.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img/saa-16access8.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img/saa-16access9.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img/saa-16access10.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img/saa-16access11.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img/saa-16access4.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/access1.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/access2.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/access3.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/access4.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/access5.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/access6.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/access7.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/access8.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/access9.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/access10.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/access11.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/access4.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
 				<section>
 					<h3>Needs</h3>
 					<ul>
