--- a/presentations/slides/Access2WebArch.html
+++ b/presentations/slides/Access2WebArch.html
@@ -48,7 +48,6 @@
 					<h3>Web Archiving at UAlbany</h3>
 					<ul>
 						<li>Partner since 2012</li>
-						<li>37,169,775 documents, 898.9 GB captured</li>
 						<li>Primary goal to preserve permanent university records</li>
 						<li>Became my responsibility in April 2015</li>
 						<li>www.albany.edu</li>
@@ -80,6 +79,22 @@
 					<li class="fragment">Effectively none</li>
 				</section>
 				<section>
+					<h3>Records that need to be discoverable</h3>
+					<img src="img-saa16/history-course-cat.png"/>
+				</section>
+				<section>
+					<h3>Records that need to be discoverable</h3>
+					<img src="img-saa16/history-404.png"/>
+				</section>
+				<section>
+					<h3>Sustainable Approach to Large-Scale Access</h3>
+					<ul>
+						<li>Intergration with traditional collections</li>
+						<li>Same, format-neutral access system</li>
+						<li>Arrangement by use and content, not format</li>
+					</ul>
+				</section>
+				<section>
 					<h3>Relationship with Traditional Collections</h3>
 					<ul>
 						<li>One-to-one seeds and fonds</li>
@@ -103,14 +118,6 @@
 					</ul>
 				</section>
 				<section>
-					<h3>Records that need to be discoverable</h3>
-					<img src="img-saa16/history-course-cat.png"/>
-				</section>
-				<section>
-					<h3>Records that need to be discoverable</h3>
-					<img src="img-saa16/history-404.png"/>
-				</section>
-				<section>
 					<h3>Integration with Collection Management</h3>
 					<ul>
 						<li>Old custom CMS database for collection management</li>
@@ -123,7 +130,7 @@
 				</section>
 				<section>
 					<h3>Integration with Collection Management</h3>
-					<img src="spreadsheet-screen"/>
+					<img src="img-saa16/spreadsheet.png"/>
 				</section>
 				<section>
 					<h3>Integration with Collection Management</h3>
@@ -133,8 +140,8 @@
 							<li><a href="http://web.archive.org/cdx/search/cdx?url=http://www.albany.edu/history/course-descriptions.shtml">http://web.archive.org/cdx/search/cdx?url=[url]</a></li>
 							<img class="noDisplay" src="img-saa16/wayback-cdx.png"/>
 						</ul>
-						<li id="showImg2">Archive-It CDX for Collections</li>
-						<ul>
+						<li id="showImg2" class="fragment">Archive-It CDX for Collections</li>
+						<ul class="fragment">
 							<li><a href="http://wayback.archive-it.org/3308/timemap/cdx?url=http://www.albany.edu/history/course-descriptions.shtml">http://wayback.archive-it.org/[col#]/timemap/cdx?url=[url]</a></li>
 							<img class="noDisplay" src="img-saa16/cdx-results.png"/>
 						</ul>
@@ -142,7 +149,7 @@
 				</section>
 				<section>
 					<h3>Integration with Collection Management</h3>
-					<img src="script-screen"/>
+					<img src="img-saa16/script.png"/>
 				</section>
 				<section>
 					<h3>Future: ArchivesSpace Integration</h3>
@@ -161,18 +168,18 @@
 						</ul>
 					</ul>
 				</section>
-				<section data-background-image="img-saa16/access1.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img-saa16/access2.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img-saa16/access3.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img-saa16/access4.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img-saa16/access5.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img-saa16/access6.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img-saa16/access7.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img-saa16/access8.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img-saa16/access9.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img-saa16/access10.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img-saa16/access11.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
-				<section data-background-image="img-saa16/access4.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/webArch1.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/webArch2.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/webArch3.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/webArch4.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/webArch5.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/webArch6.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/webArch7.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/webArch8.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/webArch9.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/webArch10.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/webArch11.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
+				<section data-background-image="img-saa16/webArch4.png"><p class="bitLink">http://bit.ly/2ajx4Ow</p></section>
 				<section>
 					<h3>Needs</h3>
 					<ul>
