--- a/presentations/slides/Access2WebArch.html
+++ b/presentations/slides/Access2WebArch.html
@@ -97,12 +97,12 @@
 				<section>
 					<h3>Relationship with Traditional Collections</h3>
 					<ul>
-						<li>One-to-one seeds and fonds</li>
+						<li>One-to-one: fonds to Archive-It Collection</li>
 						<ul class="fragment">
 							<li>New York Civil Liberties Union</li>
 							<li>Environmental Advocates of New York</li>
 						</ul>
-						<li class="fragment">Many-to-one: one seed to many fonds</li>
+						<li class="fragment">Many-to-one: many fonds to one Archive-It Collection</li>
 						<ul class="fragment">
 							<li>Campus Offices</li>
 							<ul>
