--- a/presentations/slides/Access2WebArch.html
+++ b/presentations/slides/Access2WebArch.html
@@ -38,7 +38,7 @@
 					University Archivist<br/>
 					University at Albany, SUNY</p>
 					<p id="fLeft">
-						<img src="img-saa16/twitter.png" style="margin: 0px; background: none; border: none;" width="30px"/>@gwiedeman
+						<img src="img-saa16/twitter.png" style="margin: 0px; background: none; border: none;" width="30px"/>@gregwiedeman
 					</p>
 					<p id="fRight">
 						<img src="img-saa16/github.png" style="margin: 0px; background: none; border: none;" width="30px"/>github.com/UAlbanyArchives
