fixed image file extensions

--- a/presentations/slides/RNY.html
+++ b/presentations/slides/RNY.html
@@ -74,16 +74,16 @@ University at Albany, SUNY<br/>
 	* Egypt
 	* Barbary States
 </script></section><section  data-markdown><script type="text/template">
-<!-- .slide: data-background="images/Morse1.jpg" -->
+<!-- .slide: data-background="images/Morse1.JPG" -->
 ### Jedidiah Morse, 1826
 </script></section><section  data-markdown><script type="text/template">
-<!-- .slide: data-background="images/Morse2.jpg" -->
+<!-- .slide: data-background="images/Morse2.JPG" -->
 ### Jedidiah Morse, 1826
 </script></section><section  data-markdown><script type="text/template">
-<!-- .slide: data-background="images/Willard.jpg" -->
+<!-- .slide: data-background="images/Willard.JPG" -->
 ### Emma Willard, 1835
 </script></section><section  data-markdown><script type="text/template">
-<!-- .slide: data-background="images/Mitchell2.jpg" -->
+<!-- .slide: data-background="images/Mitchell2.JPG" -->
 ### S. Augustus Mitchell, 1847
 </script></section><section  data-markdown><script type="text/template">
 ## Archives have Stuff
