added links to slides

--- a/presentations/slides/twarcExamples/ny19-wordcloud_hourly.html
+++ b/presentations/slides/twarcExamples/ny19-wordcloud_hourly.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <body>
+<div style="position:fixed; width: 100%%; top: 10%; left: 15%; font-family: sans-serif; font-size: 25pt; color:black;">
+Slides:   <a style="color:black" href="https://gwiedeman.github.io/presentations/slides/RNY.html">https://gwiedeman.github.io/presentations/slides/RNY.html</a><br/>
+Code:      <a style="color:black"  href="https://github.com/gwiedeman/ResearchingNY2016">https://github.com/gwiedeman/ResearchingNY2016</a>
+</div>
   <script src="../assets/d3.v3.min.js"></script>
   <script src="../assets/d3.layout.cloud.js"></script>
   <style>
