--- a/presentations/slides/RNY.html
+++ b/presentations/slides/RNY.html
@@ -128,7 +128,10 @@ for root, dirs, files in os.walk(images):
 		stdout, stderr = process.communicate()
 
 ~~~~
-</script></section><section  data-markdown><script type="text/template">
+<a href="https://github.com/gwiedeman/ResearchingNY2016">https://github.com/gwiedeman/ResearchingNY2016</a>
+</script>
+
+</section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="images/geoTextFiles.png" -->
 </script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="images/textFiles.png" -->
@@ -157,6 +160,7 @@ for pdfFile in os.listdir(os.path.join(__location__, "pdf")):
 	process = Popen(['C:\Program Files\mupdf\mutool.exe', 'draw', '-F', 'txt', '-o', outPath, pdfPath], stdout=PIPE, stderr=PIPE)
 	stdout, stderr = process.communicate()
 ~~~~
+<a href="https://github.com/gwiedeman/ResearchingNY2016">https://github.com/gwiedeman/ResearchingNY2016</a>
 </script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="images/bdASPExample.png" -->
 </script></section><section  data-markdown><script type="text/template">
@@ -317,6 +321,7 @@ for root, dirs, files in os.walk(dataPath):
 
 
 ~~~~
+<a href="https://github.com/gwiedeman/ResearchingNY2016">https://github.com/gwiedeman/ResearchingNY2016</a>
 </script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="images/csvOutput.png" -->
 </script></section><section  data-markdown><script type="text/template">
@@ -370,6 +375,7 @@ plt.axis('off')
 plt.show()
 
 ~~~~
+<a href="https://github.com/gwiedeman/ResearchingNY2016">https://github.com/gwiedeman/ResearchingNY2016</a>
 </script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="clouds/geoText-locations.png" -->
 <h3 style="color: black; position:absolute; top: -350px; left: 150px">Geography Texts - Locations</h3>
@@ -416,7 +422,6 @@ python3 graphEntities.py bdASP/outASP-bd/total/people.csv Clinton Sanders Trump 
 ~~~~
 
 ~~~~
-
 import os
 import sys
 import json
@@ -475,7 +480,7 @@ f.write(jsonText)
 f.close()
 
 ~~~~
-
+<a href="https://github.com/gwiedeman/ResearchingNY2016">https://github.com/gwiedeman/ResearchingNY2016</a>
 </script></section><section  data-markdown><script type="text/template">
 ### D3plus
 
