--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
 						  <!-- Wrapper for slides -->
 						  <div class="carousel-inner">
 							<div class="item active">
-							  <img src="img/IMG_0147.jpg" alt="Weimaraner 1">
+							  <img src="img/IMG_0147.JPG" alt="Weimaraner 1">
 							</div>
 							<div class="item">
-							  <img src="img/IMG_0148.jpg" alt="Weimaraner 2">
+							  <img src="img/IMG_0148.JPG" alt="Weimaraner 2">
 							</div>
 							<div class="item">
-							  <img src="img/IMG_0149.jpg" alt="Weimaraner 3">
+							  <img src="img/IMG_0149.JPG" alt="Weimaraner 3">
 							</div>
 							<div class="item">
-							  <img src="img/IMG_0150.jpg" alt="Weimaraner 4">
+							  <img src="img/IMG_0150.JPG" alt="Weimaraner 4">
 							</div>
 						  </div>
 						  
