--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <h1>About</h1>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text">
-							<p>This is a place to put some of the things I've working on. I am currently the University Archivist at the University of Albany, SUNY. </p>
+							<p>This is a place to put some of the things I'm working on. I am currently the University Archivist at the University of Albany, SUNY. </p>
 							<p>I focus on collecting documentation of the university and making it available for research use. I get to solve problems with paper records and legacy digital records, work with metadata at scale, and create ways to make a lot of content available on the web.</p>
 							<p>I do a ton of work with XML, Python, obsolete digital formats, and web technologies.</p>
 							<p>I have a research background in 19th century American History and did some work on how people understood faraway places, particularly the Eastern Mediterranean.</p>
