--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
 								<h5 class="list-group-item-heading">"Is EAD A Red Herring?: The Path to Innovative Online Archivial Information Systems"</h5>
 								<p class="list-group-item-text">2012 December</p>
 							</a>
-							<a href="writing/mostInterestingPlace.html" class="list-group-item" id="writing-7">
+							<!--<a href="writing/mostInterestingPlace.html" class="list-group-item" id="writing-7">
 								<h5 class="list-group-item-heading">"The Most Interesting Place: the Eastern Mediterranean and American Cultural Knowledge"</h5>
 								<p class="list-group-item-text">2012 June</p>
-							</a>
+							</a>-->
 							<a href="writing/writing.html" class="list-group-item">
 								<h5 class="list-group-item-heading" id="more">More...</h5>
 							</a>
