--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 				<p><strong>2013 M.A. History</strong><br/>
 				University at Albany, SUNY</p>
 				<ul>
-				<li>Thesis: “The Most Interesting Place: The Eastern Mediterranean and American Cultural Knowledge”</li>
+				<li>Thesis: <a href="writing/mostInterestingPlace.html">"The Most Interesting Place: The Eastern Mediterranean and American Cultural Knowledge"</a></li>
 				</ul>
 				<p><strong>2010 B.A. History</strong><br/>
 				Marist College, Poughkeepsie, NY</p>
