added link to c4l ne presentation

--- a/index.html
+++ b/index.html
@@ -247,6 +247,16 @@
 					<div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
+								<h4><a href="presentations/slides/c4lne.html">No More Finding Aids: A New Frontend for Special Collections &amp; Archives at UAlbany</a></h4>
+								<h5>2016 December</h5>
+								<p>Presentation at New England Code4Lib in Amherst, MA about how the finding aid as a concept is now longer useful.</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
 								<h4><a href="presentations/slides/RNY.html">APIs, WARCS, and NPL: How Technology has Created New Opportunities for Historical Research</a></h4>
 								<h5>2016 November</h5>
 								<p>Presentation at Researching New York/Conference on New York State History in Albany, NY</p>
