--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 							<div class="col-xs-12">
 								<h4><a href="presentations/slides/c4lne.html">No More Finding Aids: A New Frontend for Special Collections &amp; Archives at UAlbany</a></h4>
 								<h5>2016 December</h5>
-								<p>Presentation at New England Code4Lib in Amherst, MA about how the finding aid as a concept is now longer useful.</p>
+								<p>Presentation at New England Code4Lib in Amherst, MA that argues the finding aid as a concept is no longer useful.</p>
 							</div>
 						</div>
 					</div>
