added wasapi slides

--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
 						<div class="abstract-default">
 							<p>I write mostly on archives, particularly automating collection management and born-digital records.</p>
 						</div>
+						<div class="abstract" id="abs0">
+							<p>Article that shows archivists how Python can be used to automate workflows between different systems and reduce manual tasks. Published in <i>Practical Technology for Archives</i> Issue no.7.</p>
+							<p><i>Working with a multitude of digital tools is now a core part of an archivist’s skillset. We work with collection management systems, digital asset management systems, public access systems, ticketing or request systems, local databases, general web applications, and systems built on smaller systems linked through application programming interfaces (APIs). Over the past years, more and more of these applications have evolved to meet a variety of archival processes. We no longer expect a single tool to solve all our needs and embraced the "separation of concerns" design principle that smaller, problem-specific and modular systems are more effective than large monolithic tools that try to do everything. All of this has made the lives of archivists easier and empowered us to make our collections more accessible to our users.</i></p>
+						</div>
 						<div class="abstract" id="abs1">
 							<p>Guest post for the <i>Archive-It Blog</i>: In recent years many archives have expanded to preserve the web among other formats in their traditional collecting areas. Yet, unlike traditional formats, the best way to make web archives available to researchers is not with boxes and call numbers, but in their original environment — an Internet-connected web browser. This post discusses how at the University at Albany, SUNY, we are providing minimal access to this new type of archival material together with other formats that originated with the same creators.</p>
 						</div>
@@ -197,6 +201,10 @@
 					</div>
 					<div class="col-sm-6">
 						<div class="list-group">
+							<a href="http://practicaltechnologyforarchives.org/issue7_wiedeman/"  class="list-group-item" id="writing-0">
+								<h5 class="list-group-item-heading">"Python for Archivists: Breaking Down Barriers Between Systems"</h5>
+								<p class="list-group-item-text">2017 January</p>
+							</a>
 							<a href="https://archive-it.org/blog/post/a-sustainable-large-scale-minimal-approach-to-accessing-web-archives" class="list-group-item" id="writing-1">
 								<h5 class="list-group-item-heading">"A Sustainable, Large-Scale, Minimal Approach to Accessing Web Archives"</h5>
 								<p class="list-group-item-text">2016 October</p>
@@ -217,10 +225,10 @@
 								<h5 class="list-group-item-heading">"Nicholson Baker Would Like Us to Be Angry"</h5>
 								<p class="list-group-item-text">2013 March</p>
 							</a>
-							<a href="writing/EADRedHerring.html" class="list-group-item" id="writing-6">
+							<!--<a href="writing/EADRedHerring.html" class="list-group-item" id="writing-6">
 								<h5 class="list-group-item-heading">"Is EAD A Red Herring?: The Path to Innovative Online Archivial Information Systems"</h5>
 								<p class="list-group-item-text">2012 December</p>
-							</a>
+							</a>-->
 							<!--<a href="writing/mostInterestingPlace.html" class="list-group-item" id="writing-7">
 								<h5 class="list-group-item-heading">"The Most Interesting Place: the Eastern Mediterranean and American Cultural Knowledge"</h5>
 								<p class="list-group-item-text">2012 June</p>
@@ -244,6 +252,16 @@
             <div class="row">
 				<div class="col-xs-12 sequence">
 				
+					<div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
+								<h4><a href="presentations/slides/wasapi.html">Automating Web Archives Records in ASpace</a></h4>
+								<h5>2017 February</h5>
+								<p>Short talk at WASAPI Symposium at the Internet Archive</p>
+							</div>
+						</div>
+					</div>
+					
 					<div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
@@ -385,7 +403,7 @@
 							<div class="col-xs-12">
 								<h4><a href="https://github.com/gwiedeman/python4archivists">Example Scripts for Learning Python</a></h4>
 								<h5>Python</h5>
-								<p>Basic sample scripts to get some results with Python. For forthcoming article.</p>
+								<p>Basic sample scripts to get some results with Python. For use with "Python for Archivists".</p>
 							</div>
 						</div>
 					</div>
