--- a/writing/writing.html
+++ b/writing/writing.html
@@ -99,7 +99,14 @@
                 <div class="col-lg-12">
 				
 					<div class="jumbotron">
-						<h2><a href="http://journal.code4lib.org/articles/11239">A Sustainable, Large-Scale, Minimal Approach to Accessing Web Archives</a></h2>
+						<h2><a href="http://practicaltechnologyforarchives.org/issue7_wiedeman/">Python for Archivists: Breaking Down Barriers Between Systems</a></h2>
+						<h5>2017 January</h5>
+						<p>Working with a multitude of digital tools is now a core part of an archivist’s skillset. We work with collection management systems, digital asset management systems, public access systems, ticketing or request systems, local databases, general web applications, and systems built on smaller systems linked through application programming interfaces (APIs). Over the past years, more and more of these applications have evolved to meet a variety of archival processes. We no longer expect a single tool to solve all our needs and embraced the “separation of concerns” design principle that smaller, problem-specific and modular systems are more effective than large monolithic tools that try to do everything. All of this has made the lives of archivists easier and empowered us to make our collections more accessible to our users.</p>
+						<h5>Published in <a href="https://practicaltechnologyforarchives.org/issue7/"><em>Practical Technology for Archives&nbsp;</em>&nbsp;Issue 7</a></h5>
+					</div>
+				
+					<div class="jumbotron">
+						<h2><a href="https://archive-it.org/blog/post/a-sustainable-large-scale-minimal-approach-to-accessing-web-archives/">A Sustainable, Large-Scale, Minimal Approach to Accessing Web Archives</a></h2>
 						<h5>2016 October</h5>
 						<p>In recent years many archives have expanded to preserve the web among other formats in their traditional collecting areas. Yet, unlike traditional formats, the best way to make web archives available to researchers is not with boxes and call numbers, but in their original environment — an Internet-connected web browser. This post discusses how at the University at Albany, SUNY, we are providing minimal access to this new type of archival material together with other formats that originated with the same creators.</p>
 						<h5>Posted by the <a href="https://archive-it.org/blog/">Archive-It Blog</a></h5>
