--- a/presentations/metadataClass.html
+++ b/presentations/metadataClass.html
@@ -101,7 +101,7 @@
 						<h2>How to Metadata</h2>
 						<h5>2016 March</h5>
 						<p>Guest lecture for graduate Digital Libraries class on metadata in practice. I focus on serialized metadata outside of systems and stress the importance of metadata standards--and particularly--metadata controls. Students got hands-on experience with some basic metadata practices. I also give some tips for working with metadata and provided a glimpse of the potential for metadata now and in the near future.</p>
-						<h5><a class="slides" href="slides/howToMetadata.html">Slides</a></h5>
+						<h5><a class="slides" href="slides/HowToMetadata.html">Slides</a></h5>
 						<h5>IST 653 Digital Libraries - University at Albany, Albany, NY</h5>
 					</div>
 					
