--- a/presentations/slides/marac17.html
+++ b/presentations/slides/marac17.html
@@ -27,7 +27,8 @@ University at Albany, SUNY<br/>
 </script></section><section  data-markdown><script type="text/template">
 ## Some Background
 
-M.E. Grenander Special Collections & Archives
+M.E. Grenander Special Collections & Archives<br/>
+University at Albany, SUNY
 * 4 permanent archivists, 1 on grant funding
 	* Department Head
 	* Supervisory Archivist (Manuscripts and Front Desk)
