added two April talks

--- a/index.html
+++ b/index.html
@@ -255,6 +255,26 @@
 					<div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
+								<h4><a href="presentations/slides/erecords.html">Born-Digital Records in Practice at UAlbany</a></h4>
+								<h5>2017 April</h5>
+								<p>Guest class for Electronic Records Management graduate course.</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
+								<h4><a href="presentations/slides/marac17.html">What's a Digital Archivist?</a></h4>
+								<h5>2017 April</h5>
+								<p>Talk at MARAC Newark on the differences between "Digital Archivists" and IT Professionals</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
 								<h4><a href="presentations/slides/wasapi.html">Automating Web Archives Records in ASpace</a></h4>
 								<h5>2017 February</h5>
 								<p>Short talk at WASAPI Symposium at the Internet Archive</p>
