added nyac slides

--- a/index.html
+++ b/index.html
@@ -255,6 +255,16 @@
 					<div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
+								<h4><a href="presentations/slides/nyac2017.html">Pragmatic Processing: Diverse Approaches to Different Collections</a></h4>
+								<h5>2017 June</h5>
+								<p>Into to a panel I chaired on pragmatic/extensible processing for the 2017 New York Archives Conference in Utica</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
 								<h4><a href="presentations/slides/erecords.html">Born-Digital Records in Practice at UAlbany</a></h4>
 								<h5>2017 April</h5>
 								<p>Guest class for Electronic Records Management graduate course.</p>
