added slides from London

--- a/index.html
+++ b/index.html
@@ -255,6 +255,26 @@
 					<div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
+								<h4><a href="presentations/slides/iipc.html">Describing Web Archives: Automating Access with APIs and ArchivesSpace</a></h4>
+								<h5>2017 June</h5>
+								<p>Talk about using DACS to describe web archives, and authomating the process with APIs</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
+								<h4><a href="presentations/slides/archivesUnleashed.html">Providing Basic Access to Web Archives Provenance Data</a></h4>
+								<h5>2017 June</h5>
+								<p>Lightning Talk at Archives Unleashed 4.0 at the British Library</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
 								<h4><a href="presentations/slides/nyac2017.html">Pragmatic Processing: Diverse Approaches to Different Collections</a></h4>
 								<h5>2017 June</h5>
 								<p>Into to a panel I chaired on pragmatic/extensible processing for the 2017 New York Archives Conference in Utica</p>
