--- a/presentations/slides/archivesUnleashed.html
+++ b/presentations/slides/archivesUnleashed.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>reveal-md</title>
+        <title>Providing Basic Access to Web Archives Provenance Data</title>
         <link rel="stylesheet" href="css/reveal.css">
         <link rel="stylesheet" href="css/theme/league.css" id="theme">
         <!-- For syntax highlighting -->
