added slides from London

--- a/index.html
+++ b/index.html
@@ -265,6 +265,16 @@
 					<div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
+								<h4><a href="https://docs.google.com/presentation/d/1fvfn4z1o2jca5BKPwFEWjwPOHNK_oGNzTdzYtnU3Sa8/edit#slide=id.p">Link Ranking in Web Archives</a></h4>
+								<h5>2017 June</h5>
+								<p>WInning project for Archives Unleashed 4.0 at the British Library</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
 								<h4><a href="presentations/slides/archivesUnleashed.html">Providing Basic Access to Web Archives Provenance Data</a></h4>
 								<h5>2017 June</h5>
 								<p>Lightning Talk at Archives Unleashed 4.0 at the British Library</p>
