added book review

--- a/writing/writing.html
+++ b/writing/writing.html
@@ -99,6 +99,13 @@
                 <div class="col-lg-12">
 				
 					<div class="jumbotron">
+						<h2><a href="http://scholarsarchive.library.albany.edu/cgi/viewcontent.cgi?article=1096&context=ulib_fac_scholar"><i>Metadata</i> (Book Review)</a></h2>
+						<h5>2017 March</h5>
+						<p>Review of <i>Metadata</i> by Marcia Lei Zeng and Jian Qin.</p>
+						<h5>Published in <a href="http://www.midwestarchives.org/archival-issues"><em>Archival Issues&nbsp;</em></h5>
+					</div>
+					
+					<div class="jumbotron">
 						<h2><a href="http://practicaltechnologyforarchives.org/issue7_wiedeman/">Python for Archivists: Breaking Down Barriers Between Systems</a></h2>
 						<h5>2017 January</h5>
 						<p>Working with a multitude of digital tools is now a core part of an archivist’s skillset. We work with collection management systems, digital asset management systems, public access systems, ticketing or request systems, local databases, general web applications, and systems built on smaller systems linked through application programming interfaces (APIs). Over the past years, more and more of these applications have evolved to meet a variety of archival processes. We no longer expect a single tool to solve all our needs and embraced the “separation of concerns” design principle that smaller, problem-specific and modular systems are more effective than large monolithic tools that try to do everything. All of this has made the lives of archivists easier and empowered us to make our collections more accessible to our users.</p>
