added SAA 2017 slides and make GoogleDocs into PDFs

--- a/index.html
+++ b/index.html
@@ -255,6 +255,16 @@
 					<div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
+								<h4><a href="presentations/slides/saa2017.pdf">Beyond Finding Aids: New Approaches to Archival Description</a></h4>
+								<h5>2017 July</h5>
+								<p>Our SAA 2017 panel on rethinking finding aids for presenting archival description on the web</p>
+							</div>
+						</div>
+					</div>	
+				
+					<div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
 								<h4><a href="presentations/slides/iipc.html">Describing Web Archives: Automating Access with APIs and ArchivesSpace</a></h4>
 								<h5>2017 June</h5>
 								<p>Talk about using DACS to describe web archives, and authomating the process with APIs</p>
@@ -265,7 +275,7 @@
 					<div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
-								<h4><a href="https://docs.google.com/presentation/d/1fvfn4z1o2jca5BKPwFEWjwPOHNK_oGNzTdzYtnU3Sa8/edit#slide=id.p">Link Ranking in Web Archives</a></h4>
+								<h4><a href="presentations/slides/linkRanking2017.pdf">Link Ranking in Web Archives</a></h4>
 								<h5>2017 June</h5>
 								<p>WInning project for Archives Unleashed 4.0 at the British Library</p>
 							</div>
