fixed hover abstracts in Writing

--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
 						<div class="abstract-default">
 							<p>I write mostly on archives, particularly automating collection management and born-digital records.</p>
 						</div>
+						<div class="abstract" id="abs9">
+							<p>Review of Metadata by Marcia Lei Zeng and Jian Qin. Discusses different views of metadata among libraries and archives. Published in <i>Archival Issues</i>.</p>
+						</div>
 						<div class="abstract" id="abs0">
 							<p>Article that shows archivists how Python can be used to automate workflows between different systems and reduce manual tasks. Published in <i>Practical Technology for Archives</i> Issue no.7.</p>
 							<p><i>Working with a multitude of digital tools is now a core part of an archivist’s skillset. We work with collection management systems, digital asset management systems, public access systems, ticketing or request systems, local databases, general web applications, and systems built on smaller systems linked through application programming interfaces (APIs). Over the past years, more and more of these applications have evolved to meet a variety of archival processes. We no longer expect a single tool to solve all our needs and embraced the "separation of concerns" design principle that smaller, problem-specific and modular systems are more effective than large monolithic tools that try to do everything. All of this has made the lives of archivists easier and empowered us to make our collections more accessible to our users.</i></p>
@@ -201,7 +204,7 @@
 					</div>
 					<div class="col-sm-6">
 						<div class="list-group">
-							<a href="http://scholarsarchive.library.albany.edu/cgi/viewcontent.cgi?article=1096&context=ulib_fac_scholar"  class="list-group-item" id="writing-0">
+							<a href="http://scholarsarchive.library.albany.edu/cgi/viewcontent.cgi?article=1096&context=ulib_fac_scholar"  class="list-group-item" id="writing-9">
 								<h5 class="list-group-item-heading"><i>Metadata</i> (Book Review)</h5>
 								<p class="list-group-item-text">2017 March</p>
 							</a>
